// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalCampaignListPage renders for non-siteadmin and totalCount: 0 1`] = `
Array [
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
  </div>,
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>,
]
`;

exports[`GlobalCampaignListPage renders for non-siteadmin and totalCount: 1 1`] = `
Array [
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
  </div>,
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>,
  <FilteredConnection
    authenticatedUser={
      Object {
        "siteAdmin": false,
      }
    }
    className="mb-3"
    filters={
      Array [
        Object {
          "args": Object {},
          "id": "all",
          "label": "All",
          "tooltip": "Show all campaigns",
        },
        Object {
          "args": Object {
            "state": "OPEN",
          },
          "id": "open",
          "label": "Open",
          "tooltip": "Show only campaigns that are open",
        },
        Object {
          "args": Object {
            "state": "CLOSED",
          },
          "id": "closed",
          "label": "Closed",
          "tooltip": "Show only campaigns that are closed",
        },
      ]
    }
    hideSearch={true}
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "key": undefined,
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    nodeComponent={[Function]}
    nodeComponentProps={
      Object {
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      }
    }
    noun="campaign"
    pluralNoun="campaigns"
    queryConnection={[Function]}
  />,
]
`;

exports[`GlobalCampaignListPage renders for siteadmin and totalCount: 0 1`] = `
Array [
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
    <a
      className="btn btn-primary ml-3"
      href="/campaigns/new"
    >
      <svg
        className="mdi-icon icon-inline"
        fill="currentColor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
       New campaign
    </a>
  </div>,
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>,
]
`;

exports[`GlobalCampaignListPage renders for siteadmin and totalCount: 1 1`] = `
Array [
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
    <a
      className="btn btn-primary ml-3"
      href="/campaigns/new"
    >
      <svg
        className="mdi-icon icon-inline"
        fill="currentColor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
       New campaign
    </a>
  </div>,
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>,
  <FilteredConnection
    authenticatedUser={
      Object {
        "siteAdmin": true,
      }
    }
    className="mb-3"
    filters={
      Array [
        Object {
          "args": Object {},
          "id": "all",
          "label": "All",
          "tooltip": "Show all campaigns",
        },
        Object {
          "args": Object {
            "state": "OPEN",
          },
          "id": "open",
          "label": "Open",
          "tooltip": "Show only campaigns that are open",
        },
        Object {
          "args": Object {
            "state": "CLOSED",
          },
          "id": "closed",
          "label": "Closed",
          "tooltip": "Show only campaigns that are closed",
        },
      ]
    }
    hideSearch={true}
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "key": undefined,
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    nodeComponent={[Function]}
    nodeComponentProps={
      Object {
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      }
    }
    noun="campaign"
    pluralNoun="campaigns"
    queryConnection={[Function]}
  />,
]
`;
